--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,9 +4,29 @@
   переключая тему
 */
 
+body {
+    --background-color: black;
+    --header-font-color:#DB00FF;
+    --header-shadow: 4px 4px #FF0070;
+    --main-title-background-color: #FF0070;
+
+
+}
+
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+    background-color: var(--background-color);
+
+}
+
+.main_header {
+    color: var(--header-font-color);
+    text-shadow: var(--header-shadow);
+}
+
+.main_title {
+    background-color: var(--main-title-background-color);
 }
