--- a/styles/style.css
+++ b/styles/style.css
@@ -31,14 +31,14 @@ header {
 .main_header{
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     font-weight: 700;
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'IBM Plex Mono', sans-serif;
     line-height: 95.7px;
     display: block;
-    margin-top:17.3%;
+    margin-top:20px;
 }
 
-.main_title {
-    display: block;
+.title {
+    display: flex;
     font-family: 'IBM Plex Mono', sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -46,7 +46,20 @@ header {
     text-align: left;
     letter-spacing: 0.12em;
     margin-left: auto;
-    margin-top: 10.6%;
+    margin-top: 20px;
+    background-color: #FF0070;
+}
+
+.main_title {
+    display: flex;
+    font-family: 'IBM Plex Mono', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23px;
+    text-align: left;
+    letter-spacing: 0.12em;
+    margin-left: auto;
+    width: 100%;
 }
 
 .right_corner {
@@ -92,35 +105,99 @@ header {
 }
 
 .main_content {
-    display: grid;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding: 0px 2px 0px 2px;
+}
+
+
+
+.article__title {
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: 700;
+    color: #FF0070;
+    font-size: 18px;
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.article__block__1 {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.description {
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23.4px;
+    text-align: left;
+    display: block;
+    margin-top: 10px;
+    color: #F1B2CE;
 
 }
 
+.article__template {
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+}
+
+
 @media (min-width: 768px) {
-    .main_title {
+    .page {
+        padding:10px;
+    }
+    .title {
         max-width: calc(100%/2);
-        margin-top: 21%;
+        margin-top: 20px;
+    }
+
+    .article__title {
+        max-width: calc((98vw/3) - 20px);
     }
 
     .main_header {
         margin-top: 22.5%;
     }
+
+
+    .content__1 {
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(3, 1fr);
+
+    }
+
+    .article__block__1 {
+        grid-column-start: 2;  grid-column-end: span 2;
+    }
+
 }
 
 @media (min-width: 1024px) {
     .header__theme-menu {
         display: flex;
-        align-self: center;
+
     }
 
-
-
-    .header__theme-menu-list {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 10px;
+    .article__title {
+        max-width: calc(98vw/3);
     }
 
+    .content__2 {
+        display: grid;
+        grid-auto-flow: row;
+        gap: 20px;
+    }
 
+    .article__block__2 {
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(3,1fr);
+    }
 }
