--- a/styles/dark.css
+++ b/styles/dark.css
@@ -18,7 +18,8 @@ body {
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-    background-color: var(--background-color);
+    background: url("../images/cover-image-dark.png") fixed ;
+
 
 }
 
