--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,8 @@
 
 header {
     height: calc(100vh - 10px - 10px) ;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
 
 }
 
@@ -37,6 +37,8 @@ header {
     line-height: 95.7px;
     display: block;
     margin-top:20px;
+    color: var(--header-font-color);
+    text-shadow: 4px 4px #FF0070;;
 }
 
 .title {
@@ -46,10 +48,9 @@ header {
     font-weight: 700;
     line-height: 23px;
     text-align: left;
-    letter-spacing: 0.12em;
-    margin-left: auto;
-    margin-top: 20px;
-    background-color: #FF0070;
+    max-height: 117px;
+    align-self: center;
+    background-color: var(--main-title-background-color);
 }
 
 .main_title {
@@ -57,18 +58,20 @@ header {
     font-family: 'IBM Plex Mono', sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 23px;
+    line-height: 24px;
     text-align: left;
     letter-spacing: 0.12em;
     margin-left: auto;
     width: 100%;
+    color: var(--main-title-color) ;
+    background-color: var(--main-title-background-color)
 }
 
 .right_corner {
     display: flex;
     position: absolute;
     right: 10px;
-    top:10px;
+    top:14px;
     border-right: 1px solid;
     border-top: 1px solid;
     width: 25px;
@@ -102,7 +105,7 @@ header {
     height: 25px;
     border-color: #FF0070;
     position: absolute;
-    bottom:10px;
+    bottom:6px;
     left:10px;
 }
 
@@ -119,7 +122,7 @@ header {
 .article__title {
     font-family: 'IBM Plex Mono', sans-serif;
     font-weight: 700;
-    color: #FF0070;
+    color: var(--article-font-color);
     font-size: 18px;
     display: flex;
     margin-bottom: 20px;
@@ -144,7 +147,7 @@ header {
     line-height: 23.4px;
     text-align: left;
     display: block;
-    color: #F1B2CE;
+    color: var(--description-font-color);
 
 }
 
@@ -152,6 +155,10 @@ header {
     display: flex;
     flex-direction: column;
     gap:10px;
+}
+
+.regular {
+    font-weight: 400;
 }
 
 
@@ -223,7 +230,6 @@ header {
     .content__2 {
         display: grid;
         grid-auto-flow: row;
-        /*gap: 20px;*/
     }
 
     .article__block__2 {
