--- a/styles/dark.css
+++ b/styles/dark.css
@@ -23,6 +23,18 @@
 
 }
 
+@media (prefers-color-scheme: dark) {
+    :root {
+        /* Дублируем переменные светлой темы */
+        --header-font-color:#DB00FF;
+        --header-shadow: 4px 4px #FF0070;
+        --main-title-background-color: #FF0070;
+        --description-font-color: #F1B2CE;
+        --article-font-color: #FF0070;
+        --main-title-color: #000028;
+    }
+}
+
 /*.page {*/
 
 /*}*/
