--- a/styles/light.css
+++ b/styles/light.css
@@ -4,6 +4,16 @@
   переключая тему
 */
 
+:root.theme_light {
+    --background-image: url("../images/cover-image-light.png") fixed;
+    --header-font-color:#FFC2E6;
+    --header-shadow: 4px 4px #FF0070;
+    --main-title-background-color: #FF8DCB;
+    --main-title-color: #353430;
+    --description-font-color: #353430;
+    --article-font-color: #353430;
+}
+
 
 
 .page.theme_light {
@@ -11,8 +21,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-    background: url("../images/cover-image-light.png") fixed ;
-    --background-color: black;
+    --background-image: url("../images/cover-image-light.png") fixed;;
     --header-font-color:#FFC2E6;
     --header-shadow: 4px 4px #FF0070;
     --main-title-background-color: #FF8DCB;
@@ -22,6 +31,9 @@
 
 
 }
+
+
+
 
 
 /*.page {*/
