--- a/styles/style.css
+++ b/styles/style.css
@@ -6,10 +6,12 @@
 
 }
 
-header {
-    height: calc(100vh - 10px - 10px) ;
+.header {
+    height: calc(100vh - 10px - 10px);
+    /*height: 100vh;*/
+    /*width: calc(100vw - 20px - 20px);*/
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows:  1fr min-content 1fr;
 
 }
 
@@ -20,7 +22,7 @@ header {
 .header__theme-menu {
     display: flex;
     margin-left: auto;
-    margin-top: 20%;
+    align-self: center;
 
 }
 
@@ -34,11 +36,12 @@ header {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     font-weight: 700;
     font-family: 'IBM Plex Mono', sans-serif;
+    justify-self: start;
+    align-self: center;
     line-height: 95.7px;
     display: block;
-    margin-top:20px;
     color: var(--header-font-color);
-    text-shadow: 4px 4px #FF0070;;
+    text-shadow: 4px 4px #FF0070;
 }
 
 .title {
@@ -49,7 +52,9 @@ header {
     line-height: 23px;
     text-align: left;
     max-height: 117px;
+    width: min(100%,364px);
     align-self: center;
+    justify-self: end;
     background-color: var(--main-title-background-color);
 }
 
@@ -67,11 +72,15 @@ header {
     background-color: var(--main-title-background-color)
 }
 
+.extra_margin {
+    margin-top: 10px;
+}
+
 .right_corner {
     display: flex;
     position: absolute;
     right: 10px;
-    top:14px;
+    top:8px;
     border-right: 1px solid;
     border-top: 1px solid;
     width: 25px;
@@ -89,6 +98,7 @@ header {
     top: 15px;
 }
 
+
 .ellipse {
     width: 9px;
     height: 9px;
@@ -105,7 +115,7 @@ header {
     height: 25px;
     border-color: #FF0070;
     position: absolute;
-    bottom:6px;
+    bottom:10px;
     left:10px;
 }
 
@@ -167,14 +177,30 @@ header {
         padding:10px;
     }
 
-    header {
-        height: calc(100vh - 20px - 20px) ;
-        padding: 0px 2px 0px 2px;
+    .header {
+        height: calc(100vh - 20px - 20px);
+    }
+
+
+    .right_corner {
+        right: 20px;
+        top:18px;
+    }
+
+    .rec {
+        right: 50px;
+        top: 22px;
+    }
+
+
+    .left_corner {
+
+        bottom:24px;
+        left:20px;
     }
 
     .title {
-        max-width: calc(100%/2);
-        margin-top: 20px;
+        width: calc(100%/2);
 
     }
 
@@ -194,10 +220,6 @@ header {
         gap: 10px;
     }
 
-    .main_header {
-        margin-top: 22.5%;
-    }
-
 
     .content__1 {
         display: grid;
@@ -215,7 +237,7 @@ header {
 @media (min-width: 1024px) {
     .header__theme-menu {
         display: flex;
-
+        flex-direction: column;
     }
 
     .main_content {
