--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,26 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    list-style: none;
+}
+
+.header__theme-menu-button {
+    font-family: "IBM Plex Mono", sans-serif;
+    text-transform: lowercase;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: center;
+    height: 26px;
+    width: 70px;
+    border: none;
+
+    background-color: transparent;
+}
+
+.header__theme-menu-button_active {
+    border: 1px black solid;
+    color: var(--description-font-color) ;
 }
 
 .main_header{
