--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,6 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
-  background-color: var(--background-color);
 }
 
 h1,
@@ -20,7 +19,8 @@ h4,
 h5,
 h6,
 p {
-  margin: 0;
+  margin: 0px;
+  padding: 0;
 }
 
 ol,
