--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,6 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    list-style: none;
 }
 
 .header__theme-menu-button {
@@ -59,14 +58,12 @@
     align-self: center;
     line-height: 95.7px;
     display: block;
-    margin: 0px;
     color: var(--header-font-color);
     text-shadow: 4px 4px #FF0070;
 }
 
 .title {
     display: flex;
-    margin: 0px;
     font-family: 'IBM Plex Mono', sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -86,7 +83,7 @@
     font-weight: 700;
     line-height: 24px;
     text-align: left;
-    margin: 0px 0px 0px auto;
+    margin-left: auto;
     width: 100%;
     color: var(--main-title-color) ;
     background-color: var(--main-title-background-color)
@@ -155,8 +152,7 @@
     color: var(--article-font-color);
     font-size: 18px;
     display: flex;
-    margin: 0px 0px 20px 0px;
-
+    margin-bottom: 20px;
 }
 
 .article__block__1 {
@@ -191,6 +187,7 @@
 .regular {
     font-weight: 400;
 }
+
 
 @media (min-width: 768px) {
     .main_header {
@@ -259,6 +256,7 @@
 }
 
 @media (min-width: 1024px) {
+
     .header__theme-menu {
         display: flex;
         flex-direction: column;
