--- a/styles/style.css
+++ b/styles/style.css
@@ -194,7 +194,7 @@
     }
 
     .header {
-        padding: 10px 20px 10px 0px;
+        padding: 20px 20px 20px 0px;
     }
 
     .main_content {
@@ -255,6 +255,7 @@
         display: flex;
         justify-self: center;
         align-self: start;
+        padding-right: 23px;
 
     }
 
@@ -274,7 +275,7 @@
         display: flex;
         flex-direction: column;
     }
-    
+
     .article_title {
         max-width: calc(98vw/3);
     }
