--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,11 +4,11 @@
 */
 :root {
     --background-image: url("../images/cover-image-light.png") fixed;
-    --header-font-color:#FFC2E6;
     --header-shadow: 4px 4px #FF0070;
-    --main-title-background-color: #FF8DCB;
-    --main-title-color: #353430;
+    --title-background-color: #FF8DCB;
+    --header-font-color:#FFC2E6;
+    --subtitle-font-color: #353430;
+    --article-title-font-color: #353430;
     --description-font-color: #353430;
-    --article-font-color: #353430;
-
+    --rec-visibility: transparent;
 }
