--- a/styles/style.css
+++ b/styles/style.css
@@ -4,18 +4,14 @@
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
     background: var(--background-image);
 
-
 }
 
 .header {
+    position: relative;
     height: 100vh;
     display: grid;
     grid-template-rows:  1fr min-content 1fr;
     padding: 10px;
-
-}
-
-.decorated-zone {
 
 }
 
@@ -48,8 +44,6 @@
 
 .header__theme-menu-button_active {
     border: 1px var(--article-title-font-color) solid;
-
-
 }
 
 .main_title {
@@ -77,6 +71,7 @@
     justify-self: end;
     background-color: var(--title-background-color);
     color: var(--subtitle-font-color);
+    flex-direction: column;
 }
 
 .article_subtitle {
@@ -100,7 +95,7 @@
     display: flex;
     position: absolute;
     right: 10px;
-    top:8px;
+    top:10px;
     border-right: 1px solid;
     border-top: 1px solid;
     width: 25px;
@@ -192,6 +187,26 @@
     font-weight: 400;
 }
 
+.focus_images {
+    margin-top: 10px;
+    display: grid;
+    grid-auto-flow: row;
+    gap: 10px;
+}
+
+.picture {
+    width: 100%;
+}
+
+.footer {
+    margin-top: 40px;
+    position: relative;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
 
 @media (min-width: 768px) {
     .main_title {
@@ -205,12 +220,12 @@
     .main_content {
         padding: 0px 20px 0px 20px;
         margin-top: 60px;
-        gap:80px;
+        gap: 80px;
     }
 
     .right_corner {
         right: 20px;
-        top:18px;
+        top: 20px;
     }
 
     .rec {
@@ -221,13 +236,13 @@
 
     .left_corner {
 
-        bottom:24px;
-        left:20px;
+        bottom: 20px;
+        left: 20px;
     }
 
 
     .article_title {
-        max-width: calc((98vw/3) - 20px);
+        max-width: calc((98vw / 3) - 20px);
         min-width: 236px;
 
     }
@@ -245,19 +260,68 @@
     }
 
     .article_block_1 {
-        grid-column-start: 2;  grid-column-end: span 2;
+        grid-column-start: 2;
+        grid-column-end: span 2;
     }
 
+    .focus_images {
+        margin-top: 20px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
+
+    .picture {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .first {
+        grid-column-start: 1;
+        grid-column-end: span 2;
+
+    }
+
+    .second {
+        grid-column-start: 3;
+        grid-row-start: 1;
+        grid-row-end: span 2;
+
+
+    }
+
+    .fourth {
+        grid-row-start: 2;
+    }
+
+    .third {
+        grid-row-start: 2;
+        grid-row-end: span 2;
+
+    }
+
+    .fifth {
+        grid-column-start: 2;
+        grid-column-end: span 2;
+
+
+    }
+
+    .footer {
+        margin-top: 60px;
+    }
 }
 
 @media (min-width: 1024px) {
 
     .header {
-        padding: 0px 20px 10px 0px;
+        padding: 2px 20px 4px 0px;
     }
 
     .header__theme-menu {
         display: flex;
+        flex-direction: column;
         justify-self: center;
         align-self: start;
         padding-right: 23px;
@@ -265,24 +329,17 @@
     }
 
     .main_subtitle {
-        width: calc((100vw - 20px - 20px)/2) ;
+        width: calc((100vw - 20px - 20px) / 2);
 
     }
-
     .header__theme-menu-list {
         display: flex;
         flex-direction: row;
         gap: 10px;
     }
 
-
-    .header__theme-menu {
-        display: flex;
-        flex-direction: column;
-    }
-
     .article_title {
-        max-width: calc(98vw/3);
+        max-width: calc(98vw / 3);
     }
 
     .content_type_2 {
@@ -293,6 +350,6 @@
     .article_block_2 {
         display: grid;
         gap: 20px;
-        grid-template-columns: repeat(3,1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 }
