--- a/styles/dark.css
+++ b/styles/dark.css
@@ -11,7 +11,8 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-    --background-image: url("../images/cover-image-dark.png") fixed;
+    --background-image: url("../images/cover-image-dark.png");
+    --background-color: rgb(0 0 40);
     --header-shadow: 4px 4px #FF0070;
     --title-background-color: #FF0070;
     --header-font-color:#DB00FF;
@@ -20,6 +21,10 @@
     --description-font-color: #F1B2CE;
     --rec-visibility: #FF0070;
     --corner-color: #FF0070;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 
 
 }
@@ -28,6 +33,7 @@
     :root {
         /* Дублируем переменные светлой темы */
         --background-image: url("../images/cover-image-dark.png") fixed;
+        --background-color: rgb(0 0 40);
         --header-shadow: 4px 4px #FF0070;
         --title-background-color: #FF0070;
         --header-font-color:#DB00FF;
