--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,9 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-    background: var(--background-image);
+    background-image: var(--background-image);
+    background-color: var(--background-color);
+    background-attachment: fixed;
 
 }
 
