--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,9 @@
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
     background-image: var(--background-image);
     background-color: var(--background-color);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     background-attachment: fixed;
 
 }
