--- a/styles/dark.css
+++ b/styles/dark.css
@@ -21,7 +21,7 @@
     --description-font-color: #F1B2CE;
     --rec-visibility: #FF0070;
     --corner-color: #FF0070;
-
+    --link--shadow: #FF0070;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -37,6 +37,7 @@
         --description-font-color: #F1B2CE;
         --rec-visibility: #FF0070;
         --corner-color: #FF0070;
+        --link--shadow: #FF0070;
     }
 }
 
