--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,11 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
+
+
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-    background-image: var(--background-image);
+    /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
     background-color: var(--background-color);
+    background-image: var(--background-image);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -12,9 +14,9 @@
 
 .header {
     position: relative;
-    height: 100vh;
     display: grid;
     grid-template-rows:  1fr min-content 1fr;
+    min-height: 100vh;
     padding: 10px;
 }
 
@@ -31,27 +33,27 @@
 }
 
 .header__theme-menu-button {
+    width: 70px;
+    height: 26px;
+    border: none;
+    color: var(--article-title-font-color) ;
     font-family: "IBM Plex Mono", sans-serif;
-    text-transform: lowercase;
-    font-size: 18px;
     font-weight: 400;
+    font-size: 18px;
     line-height: 18px;
     text-align: center;
-    height: 26px;
-    width: 70px;
-    border: none;
+    text-transform: lowercase;
     background-color: transparent;
-    color: var(--article-title-font-color) ;
 }
 
 .header__theme-menu-button:hover {
-    outline: none;
     border: 0.5px solid;
+    outline: none;
 }
 
 .header__theme-menu-button:focus {
-    outline:none;
     border-bottom: var(--article-title-font-color) 1px solid    ;
+    outline:none;
 }
 
 .header__theme-menu-button_active {
@@ -59,44 +61,44 @@
 }
 
 .main_title {
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    font-weight: 700;
-    font-family: 'IBM Plex Mono', sans-serif;
+    display: block;
     justify-self: start;
     align-self: center;
-    line-height: 95.7px;
-    display: block;
     color: var(--header-font-color);
+    font-family: 'IBM Plex Mono', sans-serif;
+    font-weight: 700;
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    line-height: 95.7px;
     text-shadow: 4px 4px #FF0070;
 }
 
 .main_subtitle {
     display: flex;
+    flex-direction: column;
+    justify-self: end;
+    align-self: center;
+    width: min(100%,364px);
+    max-height: 117px;
+    color: var(--subtitle-font-color);
     font-family: 'IBM Plex Mono', sans-serif;
-    font-size: 18px;
     font-weight: 700;
+    font-size: 18px;
     line-height: 24px;
     text-align: left;
-    max-height: 117px;
-    width: min(100%,364px);
-    align-self: center;
-    justify-self: end;
     background-color: var(--title-background-color);
-    color: var(--subtitle-font-color);
-    flex-direction: column;
 }
 
 .article_subtitle {
     display: flex;
+    width: 100%;
+    margin-left: auto;
+    color: var(--subtitle-font-color) ;
     font-family: 'IBM Plex Mono', sans-serif;
-    font-size: 18px;
     font-weight: 700;
+    font-size: 18px;
     line-height: 23.4px;
     text-align: left;
-    margin-left: auto;
-    width: 100%;
-    color: var(--subtitle-font-color) ;
-    background-color: var(--title-background-color)
+    background-color: var(--title-background-color);
 }
 
 .extra_margin {
@@ -104,63 +106,63 @@
 }
 
 .right_corner {
-    display: flex;
     position: absolute;
-    right: 10px;
     top:10px;
-    border-right: 1px solid;
-    border-top: 1px solid;
+    right: 10px;
+    display: flex;
+    align-self: end;
     width: 25px;
     height: 25px;
-    align-self: end;
     border-color: var(--corner-color);
+    border-top: 1px solid;
+    border-right: 1px solid;
 }
 
 .rec {
-    font-family: 'IBM Plex Mono', sans-serif;
-    color: var(--rec-visibility);
-    display: flex;
     position: absolute;
-    right: 40px;
     top: 15px;
+    right: 40px;
+    display: flex;
+    color: var(--rec-visibility);
+    font-family: 'IBM Plex Mono', sans-serif;
 }
 
 .ellipse {
     width: 10px;
     height: 10px;
-    background-color:var(--rec-visibility);
     margin: auto;
     border-radius: 9px;
     box-shadow: 0px 0px 5px 3px var(--rec-visibility);
+    background-color:var(--rec-visibility);
 }
 
 .left_corner {
-    border-left: 1px solid;
-    border-bottom: 1px solid;
-    width: 25px;
-    height: 25px;
-    border-color: var(--corner-color);
     position: absolute;
     bottom:10px;
     left:10px;
+    width: 25px;
+    height: 25px;
+    border-color: var(--corner-color);
+    border-bottom: 1px solid;
+    border-left: 1px solid;
 }
 
 .main_content {
-    margin-top: 40px;
-    padding: 0px 10px 0px 10px;
     display: flex;
     flex-direction: column;
     gap: 50px;
+    margin-top: 40px;
+    padding: 0px 10px 0px 10px;
 }
 
 .article_title {
-    font-family: 'IBM Plex Mono', sans-serif;
-    font-weight: 700;
-    color: var(--article-title-font-color);
-    font-size: 18px;
-    line-height: 23.4px;
     display: flex;
     margin-bottom: 20px;
+    color: var(--article-title-font-color);
+    font-family: 'IBM Plex Mono', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23.4px;
 }
 
 .article_block_1 {
@@ -176,13 +178,13 @@
 }
 
 .description {
-    font-family: 'IBM Plex Mono', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 23.4px;
-    text-align: left;
     display: block;
     color: var(--description-font-color);
+    font-family: 'IBM Plex Mono', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23.4px;
+    text-align: left;
 }
 
 .outer_article {
@@ -194,8 +196,8 @@
 }
 
 .outer_article:focus {
-    outline: none;
     border: var(--description-font-color) 1px solid;
+    outline: none;
 }
 
 .article_template {
@@ -209,23 +211,23 @@
 }
 
 .focus_images {
-    margin-top: 10px;
     display: grid;
     grid-auto-flow: row;
     gap: 10px;
+    margin-top: 10px;
 }
 
 .picture {
-    width: 100%;
+    max-width: 100%;
 }
 
 .footer {
-    margin-top: 40px;
     position: relative;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-content: center;
+    min-height: 100vh;
+    margin-top: 40px;
 }
 
 @media (min-width: 768px) {
@@ -238,19 +240,19 @@
     }
 
     .main_content {
-        padding: 0px 20px 0px 20px;
-        margin-top: 60px;
         gap: 80px;
+        margin-top: 60px;
+        padding: 0px 20px 0px 20px;
     }
 
     .right_corner {
-        right: 20px;
         top: 20px;
+        right: 20px;
     }
 
     .rec {
-        right: 50px;
         top: 22px;
+        right: 50px;
     }
 
     .left_corner {
@@ -259,8 +261,8 @@
     }
 
     .article_title {
-        max-width: calc((98vw / 3) - 20px);
         min-width: 236px;
+        max-width: calc((98vw / 3) - 20px);
     }
 
     .article_template {
@@ -269,8 +271,8 @@
 
     .content_type_1 {
         display: grid;
-        gap: 20px;
         grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
 
     }
 
@@ -280,10 +282,10 @@
     }
 
     .focus_images {
-        margin-top: 20px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
+        margin-top: 20px;
     }
 
     .picture {
@@ -358,7 +360,7 @@
 
     .article_block_2 {
         display: grid;
-        gap: 20px;
         grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
     }
 }
