Another review issues fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -106,46 +106,45 @@
     margin-top: 10px;
 }
 
-.right_corner {
+.decorated-zone::before {
+    content: "";
     position: absolute;
-    top:10px;
     right: 10px;
-    display: flex;
-    align-self: end;
+    top: 10px;
     width: 25px;
     height: 25px;
-    border-color: var(--corner-color);
-    border-top: 1px solid;
-    border-right: 1px solid;
+    border-top: 1px solid var(--rec-visibility);
+    border-right: 1px solid var(--rec-visibility);
+    justify-self: end;
+}
+
+.decorated-zone::after {
+    content: "";
+    position: relative;
+    width: 25px;
+    height: 25px;
+    border-bottom: 1px solid var(--rec-visibility);
+    border-left: 1px solid var(--rec-visibility);
 }
 
 .rec {
     position: absolute;
     top: 15px;
-    right: 40px;
+    right: 20px;
     display: flex;
     color: var(--rec-visibility);
     font-family: 'IBM Plex Mono', sans-serif;
 }
 
-.ellipse {
+.rec::after {
+    content: "";
     width: 10px;
     height: 10px;
-    margin: auto;
+    margin: auto auto auto 10px;
     border-radius: 9px;
     box-shadow: 0px 0px 5px 3px var(--rec-visibility);
     background-color:var(--rec-visibility);
-}
 
-.left_corner {
-    position: absolute;
-    bottom:10px;
-    left:10px;
-    width: 25px;
-    height: 25px;
-    border-color: var(--corner-color);
-    border-bottom: 1px solid;
-    border-left: 1px solid;
 }
 
 .main_content {
@@ -193,11 +192,11 @@
 }
 
 .outer_article:hover {
-    border-bottom: var(--description-font-color) 1px solid;
+    border-bottom: currentColor 1px solid;
 }
 
 .outer_article:focus {
-    border: var(--description-font-color) 1px solid;
+    border: currentColor 1px solid;
     outline: none;
 }
 
@@ -219,7 +218,7 @@
 }
 
 .picture {
-    max-width: 100%;
+    width: 100%;
 }
 
 .footer {
@@ -227,7 +226,8 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    min-height: 100vh;
+    height: 100vh;
+    min-height: 668px;
     margin-top: 40px;
 }
 
