--- a/styles/style.css
+++ b/styles/style.css
@@ -215,10 +215,13 @@
     grid-auto-flow: row;
     gap: 10px;
     margin-top: 10px;
+    padding: 0;
 }
 
-.picture {
+.picture_grid {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .footer {
@@ -287,35 +290,38 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
         margin-top: 20px;
+        padding: 0;
     }
 
-    .picture {
+    .picture_grid {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
-    .first {
+    .picture:first-of-type {
         grid-column-start: 1;
         grid-column-end: span 2;
     }
 
-    .second {
+    .picture:nth-of-type(2) {
         grid-column-start: 3;
         grid-row-start: 1;
         grid-row-end: span 2;
     }
 
-    .fourth {
-        grid-row-start: 2;
-    }
-
-    .third {
+    .picture:nth-of-type(3)  {
         grid-row-start: 2;
         grid-row-end: span 2;
     }
 
-    .fifth {
+    .picture:nth-of-type(4) {
+        grid-row-start: 2;
+    }
+
+
+
+    .picture:nth-of-type(5)  {
         grid-column-start: 2;
         grid-column-end: span 2;
     }
